加入尺子和闪光灯

--- a/PocketTools/AppList.plist
+++ b/PocketTools/AppList.plist
@@ -190,7 +190,7 @@
 		<key>appName</key>
 		<string>尺子</string>
 		<key>controlName</key>
-		<string></string>
+		<string>RullerViewController</string>
 		<key>iconName</key>
 		<string>gr_tool_ruler</string>
 	</dict>
@@ -246,7 +246,7 @@
 		<key>appName</key>
 		<string>手电筒</string>
 		<key>controlName</key>
-		<string></string>
+		<string>FlashViewController</string>
 		<key>iconName</key>
 		<string>gr_tool_flash</string>
 	</dict>
