--- a/PocketTools/Info.plist
+++ b/PocketTools/Info.plist
@@ -31,7 +31,7 @@
 		<string>armv7</string>
 	</array>
 	<key>CFBundleDisplayName</key>
-	<string>PocketTools</string>
+	<string>工具99</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
