工具 界面更改

--- a/PocketTools/Info.plist
+++ b/PocketTools/Info.plist
@@ -36,7 +36,7 @@
 		<string>armv7</string>
 	</array>
 	<key>CFBundleDisplayName</key>
-	<string>工具99</string>
+	<string>微工具</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>FZKTJT.ttf</string>
