替换关于我们的图标

--- a/PocketTools/AppList.plist
+++ b/PocketTools/AppList.plist
@@ -256,7 +256,7 @@
 		<key>controlName</key>
 		<string>AboutUSViewController</string>
 		<key>iconName</key>
-		<string>aboutus</string>
+		<string>gr_aboutus</string>
 	</dict>
 </array>
 </plist>
